--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <title>Информационный портал</title>
   </head>
@@ -15,10 +15,10 @@
           <div class="header__logo-block logo-block">
             <a href="index.html"><img src="img/logo.svg" alt="logo" /></a>
 
-            <div class="header__text">
+            <span class="header__text">
               Информационный сайт о Каневском районе для Администрации
               Каневского сельского поселения Каневского района
-            </div>
+            </span>
           </div>
           <div class="header__contact-inform">
             <a
@@ -45,5 +45,10 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="main-container _container">
+        <div class="main-content"></div>
+      </div>
+    </main>
   </body>
 </html>
