i am finished create header and started create main block

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/null.css" />
     <title>Информационный портал</title>
   </head>
   <body>
@@ -45,9 +47,115 @@
         </div>
       </div>
     </header>
+    <div class="header__wrapper"></div>
     <main class="main">
       <div class="main-container _container">
-        <div class="main-content"></div>
+        <aside>
+          <nav class="main__sidebar sidebar">
+            <div class="sidebar__menu">
+              <a href="" class="sidebar__list main__text active-link"
+                >Главная</a
+              >
+              <a href="" class="sidebar__list main__text">О нас</a>
+              <a href="" class="sidebar__list main__text">Деятельность</a>
+              <a href="" class="sidebar__list main__text">Проекты</a>
+              <a href="" class="sidebar__list main__text">Документы</a>
+            </div>
+          </nav>
+        </aside>
+        <section class="main__container-wrapper">
+          <div class="main__news-block news-block">
+            <h1 class="main__title">Новости</h1>
+            <div class="news-block__container">
+              <div class="news-block__news news">
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/news-block__first-photo.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Каневчанка прошла обучение по повышению квалификации в
+                      области санаторно-курортного комплекса
+                    </div>
+                    <div class="news-block__text">
+                      Министерством курортов, туризма и олимпийского наследия
+                      Краснодарского края проведено обучение по повышению
+                      квалификации кадров санаторно-курортного и гостиничного
+                      комплекса Краснодарского края.
+                    </div>
+                    <div class="news-block__data">12 июля 2019</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/news-block__second-photo.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Каневчанка прошла обучение по повышению квалификации в
+                      области санаторно-курортного комплекса
+                    </div>
+                    <div class="news-block__text">
+                      Министерством курортов, туризма и олимпийского наследия
+                      Краснодарского края проведено обучение по повышению
+                      квалификации кадров санаторно-курортного и гостиничного
+                      комплекса Краснодарского края.
+                    </div>
+                    <div class="news-block__data">12 июля 2019</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/news-block__first-photo.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Каневчанка прошла обучение по повышению квалификации в
+                      области санаторно-курортного комплекса
+                    </div>
+                    <div class="news-block__text">
+                      Министерством курортов, туризма и олимпийского наследия
+                      Краснодарского края проведено обучение по повышению
+                      квалификации кадров санаторно-курортного и гостиничного
+                      комплекса Краснодарского края.
+                    </div>
+                    <div class="news-block__data">12 июля 2019</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/news-block__first-photo.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Каневчанка прошла обучение по повышению квалификации в
+                      области санаторно-курортного комплекса
+                    </div>
+                    <div class="news-block__text">
+                      Министерством курортов, туризма и олимпийского наследия
+                      Краснодарского края проведено обучение по повышению
+                      квалификации кадров санаторно-курортного и гостиничного
+                      комплекса Краснодарского края.
+                    </div>
+                    <div class="news-block__data">12 июля 2019</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
