finished create main

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       квалификации кадров санаторно-курортного и гостиничного
                       комплекса Краснодарского края.
                     </div>
-                    <div class="news-block__data">12 июля 2019</div>
+                    <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
                 <a href="" class="main__post">
@@ -98,58 +98,250 @@
                       />
                     </div>
                     <div class="news-block__title">
-                      Каневчанка прошла обучение по повышению квалификации в
-                      области санаторно-курортного комплекса
+                      В Каневском районе отправлена на скамью подсудимых
+                      автоледи, лишенная права управления транспортными
+                      средствами
                     </div>
                     <div class="news-block__text">
-                      Министерством курортов, туризма и олимпийского наследия
-                      Краснодарского края проведено обучение по повышению
-                      квалификации кадров санаторно-курортного и гостиничного
-                      комплекса Краснодарского края.
+                      43-летняя местная жительница ранее привлекалась к
+                      административной ответственности за невыполнение
+                      требования о прохождении медицинского освидетельствования
+                      на состояние опьянения.
                     </div>
-                    <div class="news-block__data">12 июля 2019</div>
+                    <div class="news-block__data">21 марта 2022</div>
                   </div>
                 </a>
                 <a href="" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
-                        src="img/news-block__first-photo.jpg"
+                        src="img/news-block__third-photo.jpg"
                         alt="Прошли обучение"
                       />
                     </div>
                     <div class="news-block__title">
-                      Каневчанка прошла обучение по повышению квалификации в
-                      области санаторно-курортного комплекса
+                      С награждения началось очередное расширенное планерное
+                      совещание в администрации района
                     </div>
                     <div class="news-block__text">
-                      Министерством курортов, туризма и олимпийского наследия
-                      Краснодарского края проведено обучение по повышению
-                      квалификации кадров санаторно-курортного и гостиничного
-                      комплекса Краснодарского края.
+                      Грамоту военного комиссара Краснодарского края вручили
+                      начальнику военно-учетного стола Каневского сельского
+                      поселения Николаю Якименко.
                     </div>
-                    <div class="news-block__data">12 июля 2019</div>
+                    <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
                 <a href="" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
-                        src="img/news-block__first-photo.jpg"
+                        src="img/news-block__fourth-photo.jpg"
                         alt="Прошли обучение"
                       />
                     </div>
                     <div class="news-block__title">
-                      Каневчанка прошла обучение по повышению квалификации в
-                      области санаторно-курортного комплекса
+                      Сформировать платежный документ на уплату всех видов
+                      пошлин теперь можно с помощью электронного сервиса
                     </div>
                     <div class="news-block__text">
-                      Министерством курортов, туризма и олимпийского наследия
-                      Краснодарского края проведено обучение по повышению
-                      квалификации кадров санаторно-курортного и гостиничного
-                      комплекса Краснодарского края.
+                      Сервис максимально автоматизирован и оснащен подсказками.
                     </div>
-                    <div class="news-block__data">12 июля 2019</div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="main__news-button">
+            <a href="">Показать еще</a>
+          </div>
+          <div class="main__news-block news-block">
+            <h1 class="main__title">Новости в сфере градостроительства</h1>
+            <div class="news-block__container">
+              <div class="news-block__news news">
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/second news-block_first.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      О получении услуг в сфере строительства в электронном виде
+                    </div>
+                    <div class="news-block__text">
+                      Управление строительства администрации муниципального
+                      образования Каневской район сообщает, что на Едином
+                      портале государственных и муниципальных услуг
+                      (gosuslugi.ru) или Региональном портале государственных и
+                      муниципальных услуг (pgu.krasnodar.ru) можно получить в
+                      электронном виде следующие услуги:
+                    </div>
+                    <div class="news-block__data">22 марта 2022</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/second news-block_second.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Порядок уведомления о планируемом строительстве жилого и
+                      садового домов на территории Каневского района
+                    </div>
+                    <div class="news-block__text">
+                      С 4 августа 2018 года получение разрешение на
+                      строительство индивидуального жилого дома больше не
+                      требуется. Вместо этого Градостроительным кодексом
+                      Российской Федерации предусматривается уведомительный
+                      характер о начале и, соответственно, об окончании
+                      строительства объекта индивидуального жилищного
+                      строительства или садового дома на земельном участке для
+                      ведения садоводства.
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/second news-block_third.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Правила установления санитарно-защитных зон и
+                      использования земельных участков, расположенных в границах
+                      санитарно-защитных зон.
+                    </div>
+                    <div class="news-block__text">
+                      Управление строительства администрации муниципального
+                      образования Каневской район информирует, что
+                      постановлением Правительства Российской Федерации от 3
+                      марта 2018 года № 222 «Об утверждении Правил установления
+                      санитарно-защитных зон и использования земельных участков,
+                      расположенных в границах санитарно-защитных зон»
+                      утверждены Правила установления санитарно - защитных зон и
+                      использования земельных участков, расположенных в границах
+                      санитарно - защитных зон.
+                    </div>
+                    <div class="news-block__data">22 марта 2022</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/second news-block_fourth.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Международная выставка «WorldBuild Krasnodar/YugBuild»
+                    </div>
+                    <div class="news-block__text">
+                      Выставочная компания КраснодарЭКСПО (в составе группы
+                      компаний ITE) при поддержке администрации Краснодарского
+                      края с 27 февраля по 2 марта 2018 года в городе Краснодаре
+                      в выставочно-конгрессном комплексе «Экспоград Юг» проводит
+                      Международную выставку строительных и отделочных
+                      материалов, инженерного оборудования и архитектурных
+                      проектов «WorldBuild Krasnodar/YugBuild».
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="main__news-button">
+            <a href="">Показать еще</a>
+          </div>
+          <div class="main__news-block news-block">
+            <h1 class="main__title">События на местах</h1>
+            <div class="news-block__container">
+              <div class="news-block__news news">
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/third-news-block.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Каневская прокуратура в судебном порядке добилась
+                      прекращения права управления транспортными средствами
+                    </div>
+                    <div class="news-block__text">
+                      Прокуратура района провела проверку соблюдения
+                      законодательства о безопасности дорожного движения.
+                    </div>
+                    <div class="news-block__data">22 марта 2022</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/third news-block__second.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      В Каневском районе госавтоинспекторы задержали местного
+                      жителя, перевозившего алкоголь без разрешительных
+                      документов
+                    </div>
+                    <div class="news-block__text">
+                      Сотрудники ДПС ОГИБДД Отдела МВД России по Каневскому
+                      району для проверки документов остановили автомобиль марки
+                      ГАЗ-5201.
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/third news-block__third.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Представитель общественности проверила условия содержания
+                      граждан, подвергнутых административному аресту.
+                    </div>
+                    <div class="news-block__text">
+                      По результату проведения проверки общественники признали
+                      работу сотрудников полиции удовлетворительной.
+                    </div>
+                    <div class="news-block__data">22 марта 2022</div>
+                  </div>
+                </a>
+                <a href="" class="main__post">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/third news-block__fourth.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Воспитатель двенадцатого детского сада стала лауреатом
+                      краевого конкурса.
+                    </div>
+                    <div class="news-block__text">
+                      Очный этап «Педагогического дебюта» прошёл в Краснодаре с
+                      15 по 17 марта.
+                    </div>
+                    <div class="news-block__data">18 марта 2022</div>
                   </div>
                 </a>
               </div>
