--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/null.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Информационный портал</title>
   </head>
   <body>
@@ -53,11 +54,15 @@
         <aside>
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
-              <a href="" class="sidebar__list main__text active-link"
+              <a href="index.html" class="sidebar__list main__text active-link"
                 >Главная</a
               >
-              <a href="" class="sidebar__list main__text">О нас</a>
-              <a href="" class="sidebar__list main__text">Деятельность</a>
+              <a href="pages/about_us.html" class="sidebar__list main__text"
+                >О районе</a
+              >
+              <a href="pages/media.html" class="sidebar__list main__text"
+                >Медиа</a
+              >
               <a href="" class="sidebar__list main__text">Проекты</a>
               <a href="" class="sidebar__list main__text">Документы</a>
             </div>
@@ -68,7 +73,7 @@
             <h1 class="main__title">Новости</h1>
             <div class="news-block__container">
               <div class="news-block__news news">
-                <a href="" class="main__post">
+                <a href="posts/post_1.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -89,7 +94,7 @@
                     <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_2.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -111,7 +116,7 @@
                     <div class="news-block__data">21 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_3.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -131,7 +136,7 @@
                     <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_4.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -149,17 +154,56 @@
                     <div class="news-block__data">21 марта 2022</div>
                   </div>
                 </a>
+                <a href="posts/post_13.html" class="main__post main__post-hide">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/news-block__five-photo.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      В Каневском районе полицейские продолжают проводить
+                      профилактическую акцию «Скажи мошенникам НЕТ!»
+                    </div>
+                    <div class="news-block__text">
+                      Стражи порядка рассказали гражданам об основных видах
+                      мошенничества в Интернете.
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
+                <a href="posts/post_16.html" class="main__post main__post-hide">
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/news-block__six-photo.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Госавтоинспекция Каневского района напоминает о
+                      недопущении коррупционных преступлений
+                    </div>
+                    <div class="news-block__text">
+                      Взяткой считается любой предмет, предлагаемый должностному
+                      лицу в обмен на бездействие или совершение определенных
+                      действий.
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
           <div class="main__news-button">
-            <a href="">Показать еще</a>
+            <span>Показать еще</span>
           </div>
           <div class="main__news-block news-block">
             <h1 class="main__title">Новости в сфере градостроительства</h1>
             <div class="news-block__container">
               <div class="news-block__news news">
-                <a href="" class="main__post">
+                <a href="posts/post_5.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -181,7 +225,7 @@
                     <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_6.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -206,7 +250,7 @@
                     <div class="news-block__data">21 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_7.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -233,7 +277,7 @@
                     <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_8.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -256,17 +300,70 @@
                     <div class="news-block__data">21 марта 2022</div>
                   </div>
                 </a>
+                <a
+                  href="posts/post_14.html"
+                  class="main__post main__hide-posts"
+                >
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/second news-block_five.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Управление строительства информирует
+                    </div>
+                    <div class="news-block__text">
+                      Управление строительства муниципального образования
+                      Каневской район информирует население о возможности
+                      получения информации из информационной системы обеспечения
+                      градостроительной деятельности МО Каневской район (ИСОГД)
+                      для осуществления градостроительной, инвестиционной и иной
+                      хозяйственной деятельности из разделов:
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
+                <a
+                  href="posts/post_15.html"
+                  class="main__post main__hide-posts"
+                >
+                  <div class="news-block__content">
+                    <div class="news-block__img">
+                      <img
+                        src="img/second news-block_six.jpg"
+                        alt="Прошли обучение"
+                      />
+                    </div>
+                    <div class="news-block__title">
+                      Управление строительства муниципального образования
+                      Каневской район информирует население о возможности
+                      получения информации из информационной системы обеспечения
+                      градостроительной деятельности МО Каневской район (ИСОГД)
+                      для осуществления градостроительно
+                    </div>
+                    <div class="news-block__text">
+                      В совещании приняли участие заместители глав муниципальных
+                      образований Краснодарского края, специалисты органов
+                      архитектуры края, специалисты администраций муниципальных
+                      образований края, ответственные за ведение и наполнение
+                      официальных сайтов.
+                    </div>
+                    <div class="news-block__data">21 марта 2022</div>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
           <div class="main__news-button">
-            <a href="">Показать еще</a>
+            <span>Показать еще</span>
           </div>
           <div class="main__news-block news-block">
             <h1 class="main__title">События на местах</h1>
             <div class="news-block__container">
               <div class="news-block__news news">
-                <a href="" class="main__post">
+                <a href="posts/post_9.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -285,7 +382,7 @@
                     <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_10.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -306,7 +403,7 @@
                     <div class="news-block__data">21 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_11.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -325,7 +422,7 @@
                     <div class="news-block__data">22 марта 2022</div>
                   </div>
                 </a>
-                <a href="" class="main__post">
+                <a href="posts/post_12.html" class="main__post">
                   <div class="news-block__content">
                     <div class="news-block__img">
                       <img
@@ -350,5 +447,57 @@
         </section>
       </div>
     </main>
+    <footer>
+      <div class="footer-container _container">
+        <div class="footer-content">
+          <div class="footer__information-block">
+            <div class="footer-logo">
+              <img src="img/logo.svg" />
+            </div>
+            <div class="footer__text-content">
+              <div class="footer-title">
+                Информационный сайт о Каневском районе для Администрации
+                Каневского сельского поселения Каневского района
+              </div>
+              <div class="footer__inform-location">
+                <img src="img/footer-location.svg" alt="footer-logo" />
+                <p class="footer__location">
+                  353730, ул. Горького, 60, Каневская, Краснодарский край
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="footer__contact-block">
+            <div class="footer__contact-links">
+              <a
+                href="https://vk.com/kanevskadm"
+                class="footer-link"
+                target="_blank"
+              >
+                <img src="img/vk-icon.svg" />
+              </a>
+              <a
+                href="https://www.youtube.com/channel/UClzIxca7wyUrRcF7MD9s5jg"
+                class="footer-link"
+                target="_blank"
+              >
+                <img src="img/youtube-icon.svg" /> </a
+              ><a
+                href="https://ok.ru/admkanevskaya"
+                class="footer-link"
+                target="_blank"
+              >
+                <img src="img/ok-icon.svg" />
+              </a>
+            </div>
+            <div class="footer__contact-inform">
+              <div class="footer__phone-number">+7(86164)7-03-07</div>
+              <div class="footer__email">kanevskaya@mo.krasnodar.ru</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
