finished create page about_us and started create page media

--- a/pages/media.html
+++ b/pages/media.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/null.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="../css/abous_us.css" />
+    <link rel="stylesheet" href="../css/media.css" />
     <title>О нас</title>
   </head>
   <body>
@@ -69,7 +69,9 @@
             </div>
           </nav>
         </aside>
-        <section class="main_section"></section>
+        <section class="main_section media">
+          <div class="media__container"></div>
+        </section>
       </div>
     </main>
     <footer>
