--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -69,7 +69,99 @@
             </div>
           </nav>
         </aside>
-        <section class="main_section"></section>
+        <section class="main_section">
+          <div class="inform-block">
+            <div class="inform-block__image-container">
+              <img src="../img/about_us-head.jpg" alt="photo" />
+            </div>
+            <div class="inform-block__text-block">
+              <p>
+                <b>Каневской район</b> основан в 1924 году. Граница Каневского
+                района установлена Указом Президиума Верховного Совета РСФСР от
+                22 августа 1953 года и решением Краснодарского крайисполкома от
+                27 марта 1964 года. Каневской район располагается в равнинной
+                части края, в 120 километрах северо-западнее города Краснодара.
+                Протяженность его территории с севера на юг составляет 50 км, с
+                запада на восток – 75 км. Площадь района - почти 2,5 тысячи кв.
+                км, это 3 % от общей площади Кубани. Район граничит с севера со
+                Щербиновским и Староминским районами, с востока – с
+                Ленинградским и Павловским районами, с юга – с Брюховецким
+                районом, с запада – с Приморско-Ахтарским и Ейским районами. С
+                востока на запад район пересекают 7 степных рек общей
+                протяженностью 213 км. Для Каневского района характерна мягкая
+                зима и жаркое лето. Климат умеренно-континентальный. Общая
+                численность жителей района – порядка 104 тысяч человек. Площадь
+                сельхозугодий в районе составляет свыше 180 тысяч гектаров.
+                Водный фонд – 35 тысяч га. Лесной фонд - 3,5 тысячи га. Русловых
+                водных ресурсов - 17 тысяч га. Богатой флорой и фауной
+                отличаются искусственный Челбасский лес площадью 1459 гектаров,
+                заложенный сотню лет назад ученым-лесоводом Степановым, а также
+                более 230 тысяч гектаров охотничьих угодий, из них 39 тысяч
+                гектаров - плавней. Основу транспортной сети составляет
+                Северо-Кавказская железнодорожная магистраль. От районного
+                центра – станицы Каневской – до Краснодара 120 километров,
+                столько же до портового города Ейск. Расстояние до города
+                Ростов-на-Дону – 160 км, до федеральной трассы Ростов – Баку –
+                80 км. Связь с районами и ближайшими регионами Российской
+                Федерации поддерживается автобусным сообщением. На территории
+                района более 300 км дорог с асфальтовым покрытием межрайонного и
+                районного значения, не считая поселковых. Через земли района
+                протянуты нефте- и газопроводы высокого давления. С 1956 года
+                впервые в истории нефтегазовой промышленности Кубани началась
+                добыча природного газа из месторождения на территории района.
+                Сетевой газ подведен к 90 процентам населенных пунктов.
+                Источником водоснабжения служат подземные воды, добываемые с
+                помощью артезианских скважин глубиной от 170 до 210 метров.
+                Свыше сотни скважин обеспечивают население и предприятия водой.
+                История района пишется делами его жителей. Многие начинаются со
+                слов «первый», «самый», «единственный».
+              </p>
+              <p>
+                Каневская - самая большая станица на Кубани. В Каневском районе
+                построены первая сельская картинная галерея, самая высокая в
+                крае металлическая радиотелевизионная мачта, первый в России
+                сельский широкоформатный кинотеатр, первый на Кубани завод
+                газовой аппаратуры, первый сельский Дворец бракосочетания,
+                первый в России сельский Дворец спорта с плавательным бассейном
+                и первый на юге России Ледовый дворец спорта, единственный в
+                крае бесплатный зоопарк с более чем сорокапятилетней историей. В
+                районе открыто первое на Кубани газоконденсатное месторождение.
+                Здесь успешно работает первая в России сельская телестудия.
+                Свято-Покровский храм станицы Каневской - единственный
+                сохранившийся с начала прошлого века на территории от Краснодара
+                до Ейска. К его вековому юбилею в 2012 году на собранные всем
+                миром средства установлен первый на Кубани памятник святым
+                равноапостольным просветителям Кириллу и Мефодию. Каневской
+                район – крупнейшая зона многоотраслевого сельскохозяйственного
+                производства Кубани с развитым перерабатывающим комплексом. В
+                2016 году по темпам роста основных экономических показателей по
+                крупным и средним организациям район занял 4 место среди 44
+                муниципальных образований Краснодарского края. По объему
+                отгруженных сельхозтоваров он на протяжении последних лет
+                стабильно в числе лидеров в крае. Сельскохозяйственная отрасль
+                является бюджетообразующей.
+              </p>
+            </div>
+          </div>
+          <div class="main__slider-block">
+            <div class="slider">
+              <div class="slider-wrapper">
+                <div class="slider-line">
+                  <img src="../img/about_us-slider--first.jpg" alt="" />
+                  <img src="../img/about_us-slider--second.jpg" alt="" />
+                  <img src="../img/about_us-slider--third.jpg" alt="" />
+                  <img src="../img/about_us-slider--fourth.jpg" alt="" />
+                  <img src="../img/about_us-slider--five.jpg" alt="" />
+                  <img src="../img/about_us-slider--six.jpg" alt="" />
+                </div>
+              </div>
+              <div class="slider-buttons">
+                <button class="prev-button"></button>
+                <button class="next-button"></button>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer>
