--- a/pages/media.html
+++ b/pages/media.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/null.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/media.css" />
-    <title>О нас</title>
+    <title>Медиа</title>
   </head>
   <body>
     <header class="header">
@@ -69,8 +69,111 @@
             </div>
           </nav>
         </aside>
-        <section class="main_section media">
-          <div class="media__container"></div>
+        <section class="media">
+          <div class="media__container">
+            <div class="media__album-container">
+              <div class="media__title">
+                <h1>2021 год</h1>
+              </div>
+              <div class="media__album-block">
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img src="../img/first-album.jpeg" alt="cover" />
+                    </div>
+                    <div class="album__subtitle">День учителя</div>
+                    <div class="album__date">2021 год</div>
+                  </div>
+                </a>
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img src="../img/second-album.jpg" alt="cover" />
+                    </div>
+                    <div class="album__subtitle">День района</div>
+                    <div class="album__date">2021 год</div>
+                  </div>
+                </a>
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img src="../img/third-album.jpeg" alt="cover" />
+                    </div>
+                    <div class="album__subtitle">Медалисты</div>
+                    <div class="album__date">2021 год</div>
+                  </div>
+                </a>
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img src="../img/fourth-album.jpeg" alt="cover" />
+                    </div>
+                    <div class="album__subtitle">Откритие ДК "Колос"</div>
+                    <div class="album__date">2021 год</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="media__album-container">
+              <div class="media__title">
+                <h1>2020 год</h1>
+              </div>
+              <div class="media__album-block">
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img
+                        src="../img/second-album_first-photo.jpg"
+                        alt="cover"
+                      />
+                    </div>
+                    <div class="album__subtitle">Прием одаренных детей</div>
+                    <div class="album__date">2020 год</div>
+                  </div>
+                </a>
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img
+                        src="../img/second-album_second-photo.jpeg"
+                        alt="cover"
+                      />
+                    </div>
+                    <div class="album__subtitle">День защиты детей</div>
+                    <div class="album__date">2020 год</div>
+                  </div>
+                </a>
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img
+                        src="../img/second-album_third-photo.jpeg"
+                        alt="cover"
+                      />
+                    </div>
+                    <div class="album__subtitle">
+                      День социального работника
+                    </div>
+                    <div class="album__date">2020 год</div>
+                  </div>
+                </a>
+                <a href="#" class="media__album">
+                  <div class="album">
+                    <div class="album__img">
+                      <img
+                        src="../img/second-album_fourth-photo.jpg"
+                        alt="cover"
+                      />
+                    </div>
+                    <div class="album__subtitle">
+                      Сельские спортивные игры кубани
+                    </div>
+                    <div class="album__date">2021 год</div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
