fixed madia page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
               <a href="pages/about_us.html" class="sidebar__list main__text"
                 >О районе</a
               >
-              <a href="pages/media.html" class="sidebar__list main__text"
+              <a
+                href="pages/page_media/media.html"
+                class="sidebar__list main__text"
                 >Медиа</a
               >
               <a href="" class="sidebar__list main__text">Проекты</a>
