--- a/pages/page_media/media.html
+++ b/pages/page_media/media.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/fonts.css" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/null.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="../css/media.css" />
+    <link rel="stylesheet" href="../../css/header.css" />
+    <link rel="stylesheet" href="../../css/fonts.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/null.css" />
+    <link rel="stylesheet" href="../../css/footer.css" />
+    <link rel="stylesheet" href="../../css/media.css" />
     <title>Медиа</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
       <div class="header-container _container">
         <div class="header__content">
           <div class="header__logo-block logo-block">
-            <a href="index.html"><img src="../img/logo.svg" alt="logo" /></a>
+            <a href="index.html"><img src="../../img/logo.svg" alt="logo" /></a>
 
             <span class="header__text">
               Информационный сайт о Каневском районе для Администрации
@@ -37,13 +37,13 @@
               class="header-link"
               target="_blank"
             >
-              <img src="../img/youtube-icon.svg" /> </a
+              <img src="../../img/youtube-icon.svg" /> </a
             ><a
               href="https://ok.ru/admkanevskaya"
               class="header-link"
               target="_blank"
             >
-              <img src="../img/ok-icon.svg" />
+              <img src="../../img/ok-icon.svg" />
             </a>
           </div>
         </div>
@@ -56,14 +56,16 @@
           <nav class="main__sidebar sidebar">
             <div class="sidebar__menu">
               <a
-                href="../index.html"
+                href="../../index.html"
                 class="sidebar__list main__text active-link"
                 >Главная</a
               >
-              <a href="../pages/about_us.html" class="sidebar__list main__text"
+              <a
+                href="../../pages/about_us.html"
+                class="sidebar__list main__text"
                 >О районе</a
               >
-              <a href="" class="sidebar__list main__text">Медиа</a>
+              <a href="media.html" class="sidebar__list main__text">Медиа</a>
               <a href="" class="sidebar__list main__text">Проекты</a>
               <a href="" class="sidebar__list main__text">Документы</a>
             </div>
@@ -79,7 +81,7 @@
                 <a href="#" class="media__album">
                   <div class="album">
                     <div class="album__img">
-                      <img src="../img/first-album.jpeg" alt="cover" />
+                      <img src="../../img/first-album.jpeg" alt="cover" />
                     </div>
                     <div class="album__subtitle">День учителя</div>
                     <div class="album__date">2021 год</div>
@@ -88,7 +90,7 @@
                 <a href="#" class="media__album">
                   <div class="album">
                     <div class="album__img">
-                      <img src="../img/second-album.jpg" alt="cover" />
+                      <img src="../../img/second-album.jpg" alt="cover" />
                     </div>
                     <div class="album__subtitle">День района</div>
                     <div class="album__date">2021 год</div>
@@ -97,7 +99,7 @@
                 <a href="#" class="media__album">
                   <div class="album">
                     <div class="album__img">
-                      <img src="../img/third-album.jpeg" alt="cover" />
+                      <img src="../../img/third-album.jpeg" alt="cover" />
                     </div>
                     <div class="album__subtitle">Медалисты</div>
                     <div class="album__date">2021 год</div>
@@ -106,7 +108,7 @@
                 <a href="#" class="media__album">
                   <div class="album">
                     <div class="album__img">
-                      <img src="../img/fourth-album.jpeg" alt="cover" />
+                      <img src="../../img/fourth-album.jpeg" alt="cover" />
                     </div>
                     <div class="album__subtitle">Откритие ДК "Колос"</div>
                     <div class="album__date">2021 год</div>
@@ -123,7 +125,7 @@
                   <div class="album">
                     <div class="album__img">
                       <img
-                        src="../img/second-album_first-photo.jpg"
+                        src="../../img/second-album_first-photo.jpg"
                         alt="cover"
                       />
                     </div>
@@ -135,7 +137,7 @@
                   <div class="album">
                     <div class="album__img">
                       <img
-                        src="../img/second-album_second-photo.jpeg"
+                        src="../../img/second-album_second-photo.jpeg"
                         alt="cover"
                       />
                     </div>
@@ -147,7 +149,7 @@
                   <div class="album">
                     <div class="album__img">
                       <img
-                        src="../img/second-album_third-photo.jpeg"
+                        src="../../img/second-album_third-photo.jpeg"
                         alt="cover"
                       />
                     </div>
@@ -161,7 +163,7 @@
                   <div class="album">
                     <div class="album__img">
                       <img
-                        src="../img/second-album_fourth-photo.jpg"
+                        src="../../img/second-album_fourth-photo.jpg"
                         alt="cover"
                       />
                     </div>
@@ -182,7 +184,7 @@
         <div class="footer-content">
           <div class="footer__information-block">
             <div class="footer-logo">
-              <img src="../img/logo.svg" />
+              <img src="../../img/logo.svg" />
             </div>
             <div class="footer__text-content">
               <div class="footer-title">
@@ -190,7 +192,7 @@
                 Каневского сельского поселения Каневского района
               </div>
               <div class="footer__inform-location">
-                <img src="../img/footer-location.svg" alt="footer-logo" />
+                <img src="../../img/footer-location.svg" alt="footer-logo" />
                 <p class="footer__location">
                   353730, ул. Горького, 60, Каневская, Краснодарский край
                 </p>
@@ -204,20 +206,20 @@
                 class="footer-link"
                 target="_blank"
               >
-                <img src="../img/vk-icon.svg" />
+                <img src="../../img/vk-icon.svg" />
               </a>
               <a
                 href="https://www.youtube.com/channel/UClzIxca7wyUrRcF7MD9s5jg"
                 class="footer-link"
                 target="_blank"
               >
-                <img src="../img/youtube-icon.svg" /> </a
+                <img src="../../img/youtube-icon.svg" /> </a
               ><a
                 href="https://ok.ru/admkanevskaya"
                 class="footer-link"
                 target="_blank"
               >
-                <img src="../img/ok-icon.svg" />
+                <img src="../../img/ok-icon.svg" />
               </a>
             </div>
             <div class="footer__contact-inform">
@@ -228,6 +230,5 @@
         </div>
       </div>
     </footer>
-    <script src="../js/main.js"></script>
   </body>
 </html>
