--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -63,7 +63,9 @@
               <a href="../pages/about_us.html" class="sidebar__list main__text"
                 >О районе</a
               >
-              <a href="media.html" class="sidebar__list main__text">Медиа</a>
+              <a href="page_media/media.html" class="sidebar__list main__text"
+                >Медиа</a
+              >
               <a href="" class="sidebar__list main__text">Проекты</a>
               <a href="" class="sidebar__list main__text">Документы</a>
             </div>
