created three pages album

--- a/pages/page_media/media.html
+++ b/pages/page_media/media.html
@@ -78,7 +78,10 @@
                 <h1>2021 год</h1>
               </div>
               <div class="media__album-block">
-                <a href="#" class="media__album">
+                <a
+                  href="../page_media/albums/first-album.html"
+                  class="media__album"
+                >
                   <div class="album">
                     <div class="album__img">
                       <img src="../../img/first-album.jpeg" alt="cover" />
@@ -87,7 +90,7 @@
                     <div class="album__date">2021 год</div>
                   </div>
                 </a>
-                <a href="#" class="media__album">
+                <a href="albums/second-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img src="../../img/second-album.jpg" alt="cover" />
@@ -96,7 +99,7 @@
                     <div class="album__date">2021 год</div>
                   </div>
                 </a>
-                <a href="#" class="media__album">
+                <a href="albums/third-album.html" class="media__album">
                   <div class="album">
                     <div class="album__img">
                       <img src="../../img/third-album.jpeg" alt="cover" />
